--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,65 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/nanohttpd-2.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-pool-1.5.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.14.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ejml-core-0.32.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ejml-ddense-0.32.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/GeographicLib-Java-1.44.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-api-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-coverage-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-cql-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-data-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-main-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-metadata-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-opengis-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-referencing-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-render-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-shapefile-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-swt-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-19.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/HikariCP-2.7.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-geocore-1.1.20.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-streams-1.1.20.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff-1.1.20.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities-1.1.20.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javax.json-1.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jdom2-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-multipart-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jgridshift-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/json-simple-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr-275-1.0-beta-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-affine-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-algebra-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-bandcombine-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-bandmerge-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-bandselect-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-binarize-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-border-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-buffer-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-classifier-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-colorconvert-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-colorindexer-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-crop-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-errordiffusion-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-format-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-imagefunction-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-iterators-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-lookup-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-mosaic-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-nullop-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-orderdither-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-piecewise-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-rescale-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-rlookup-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-scale-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-stats-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-translate-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-utilities-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-utils-1.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-vectorbin-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-warp-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-zonal-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts-core-1.14.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts-example-1.14.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts-io-1.14.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/nanohttpd-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-updates-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.emf.common-2.12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.emf.ecore-2.12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.emf.ecore.xmi-2.12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/javax.json-1.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-pool-1.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/ecore-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-api-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-coverage-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-cql-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-data-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-graph-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-main-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-metadata-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-opengis-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-referencing-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-render-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-shapefile-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff-1.1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities-1.1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jdom-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-multipart-1.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jgridshift-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jsr-275-1.0-beta-2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jt-utils-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.xsd-2.12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.12.jar"/>
@@ -68,23 +119,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/vecmath-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="libs/olca-cloud-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-core-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-ecospold-1-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-ecospold-2-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-formula-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-geo-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-ilcd-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-io-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-jsonld-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-simapro-csv-1.7.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-updates-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
