--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -6,12 +6,11 @@
 	<version>1.7.1</version>
 	<packaging>pom</packaging>
 
+	<properties>
+		<geotools.version>19.1</geotools.version>
+	</properties>
+
 	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net repository</name>
-			<url>http://download.java.net/maven/2</url>
-		</repository>
 		<repository>
 			<id>osgeo</id>
 			<name>Open Source Geospatial Foundation Repository</name>
@@ -87,12 +86,6 @@
 			<version>${project.version}</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-shapefile</artifactId>
-			<version>10.3</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.python</groupId>
 			<artifactId>jython-standalone</artifactId>
@@ -175,7 +168,7 @@
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-swt</artifactId>
-			<version>10.3</version>
+			<version>${geotools.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.geotools</groupId>
