--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/jakarta.persistence-2.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/FastInfoset-1.2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/istack-commons-runtime-3.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-runtime-2.3.2.jar"/>
@@ -19,8 +25,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.8.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/javax.json-api-1.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.19.jar"/>
@@ -45,11 +49,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.7.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.12.jar"/>
